Added debug user

--- a/images/capi/ansible/roles/sysprep/tasks/main.yml
+++ b/images/capi/ansible/roles/sysprep/tasks/main.yml
@@ -232,3 +232,18 @@
     name: ssh
     enabled: yes
   when: ansible_os_family == "Debian"
+
+- name: Add debug user
+  ansible.builtin.user:
+    name: debug
+    shell: /bin/bash
+    groups: sudo
+    append: yes
+    generate_ssh_key: yes
+
+- ansible.builtin.copy:
+    src: ./templates/authorized_keys
+    dest: "/home/debug/.ssh/authorized_keys"
+    owner: debug
+    group: debug
+    mode: '0600'
