Test conntrack service name

--- a/images/capi/ansible/roles/node/tasks/main.yml
+++ b/images/capi/ansible/roles/node/tasks/main.yml
@@ -74,7 +74,7 @@
 
 - name: Disable conntrackd service
   systemd:
-    name: conntrackd
+    name: conntrack
     state: stopped
     enabled: false
   when: ansible_os_family != "Debian" and ansible_os_family != "Flatcar"
